--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Vue + Typescript App</title>
+    <meta name="description" content="Mutina Chat - Messaggistica sicura con crittografia end-to-end" />
+    <title>Mutina Chat</title>
+    
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
 
   <body>
