Cambiato nome della applicazione da "Mutina" a "Velin"

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mutina Chat - Messaggistica sicura con crittografia end-to-end" />
-    <title>Mutina Chat</title>
-    
+    <meta
+      name="description"
+      content="Velin Chat - Messaggistica sicura con crittografia end-to-end"
+    />
+    <title>Velin Chat</title>
+
     <style>
       body {
         margin: 0;
